[package]
name = "store-load-reordering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
heck = { version = "0.5.0-rc.1" }

[profile.release]
opt-level = 3
